# Streamlit-Datasphere-tools

./: .gitignore  BUILD_EXECUTABLE_GUIDE.md  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_START.md  README.md  build_executable.py  config_template.json  install.bat  install.sh  pyproject.toml  requirements-build.txt  requirements.txt  run.bat  run.sh  setup_distribution.py  streamlit_appV2.py
.devcontainer/: devcontainer.json
Streamlit1/: OAuth.py  __init__.py  api_client.py  business_name.py  cache_manager.py  config_helpers.py  config_manager_v2.py  dac_per_user.py  db_client.py  documentation_builder.py  documentation_helper.py  documentation_helper_ui.py  documentation_ui.py  error_handler.py  export_objects.py  exposed_views.py  find_column.py  lineage.py  lineage_ui.py  models.py  object_dependencies.py  settings_ui.py  userlist.py  utils.py
docs/guides/: migration-guide.md
docs/reference/: api-endpoints.md
examples/: 01_ACQ_RF_FI_TD_DELTA_S4H.json  02_DWH_CUBE_UNIVERSAL_LEDGER.json  02_DWH_FACT_UNIVERSAL_LEDGER.json  02_DWH_LT_UNIVERSALLEDGER.json  02_DWH_TF1_UNIVERSALLEDGER_ETL.json
tests/: __init__.py
