[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasphere-tools"
version = "2.0.0"
description = "SAP Datasphere Tools - Internal toolkit for lineage analysis, documentation generation, and database management"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary - Internal Use Only"}
authors = [
    {name = "Tobias Meyer", email = "tobias.meyer@delaware.pro"},
    {name = "Delaware Datasphere Team"}
]
keywords = ["sap", "datasphere", "streamlit", "data-analytics", "lineage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "hdbcli>=2.19.0",
    "requests>=2.31.0",
    "requests-oauthlib>=1.3.1",
    "urllib3>=2.0.0",
    "pydantic>=2.5.0",
    "cryptography>=42.0.0",
    "python-dateutil>=2.8.2",
    "cron-descriptor>=1.4.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "pyinstaller>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/mathiasmid/Streamlit-Datasphere-tools"
Repository = "https://github.com/mathiasmid/Streamlit-Datasphere-tools"
Issues = "https://github.com/mathiasmid/Streamlit-Datasphere-tools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["Streamlit1*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
